feat: added rich-text block

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -5,8 +5,8 @@
     ],
     "rich-text": {
       "props": {
-        "text": "*Hello, World!*",
-        "textAlignment": "RIGHT"
+        "textAlignment": "RIGHT",
+        "text": "*Hello, World!*"
       }
     }
   }
