fix: fixed rich-text block boldness

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -7,7 +7,7 @@
   "rich-text": {
     "props": {
       "textAlignment": "RIGHT",
-      "text": "*Hello, World!*"
+      "text": "**Hello, World!**"
     }
   }
 }
