fix: fixed rich-text block position

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,7 +6,7 @@
   },
   "rich-text": {
     "props": {
-      "textAlignment": "RIGHT",
+      "textPosition": "RIGHT",
       "text": "**Hello, World!**"
     }
   }
