feat: aligned to the center

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -7,6 +7,7 @@
   "rich-text": {
     "props": {
       "textPosition": "RIGHT",
+      "textAlignment": "CENTER",
       "text": "**Hello, World!**"
     }
   }
