--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,7 +2,8 @@
   "store.home": { 
     "blocks": [
       "rich-text",
-      "info-card"
+      "info-card#button-left",
+      "info-card#button-right"
     ]
   },
   "rich-text": {
