--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,16 +2,19 @@
   "store.home": { 
     "blocks": [
       "flex-layout.row",
-      "shelf"
+      "shelf",
+      "slider-layout#home"
     ]
   },
+
   "flex-layout.row":{
     "children": [
       "info-card#rethink",
       "flex-layout.col"
     ]
   },
- "info-card#rethink": {
+
+  "info-card#rethink": {
     "props": {
       "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
       "isFullModeStyle": true,
@@ -20,22 +23,35 @@
       "textPosition": "center"
     }
   },
+
   "flex-layout.col": {
     "children": [
       "image#electronics",
       "image#major-appliance"
     ]  
   },
+
   "image#electronics": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
       "maxWidth": "100%"
     }
   },
+
   "image#major-appliance": {
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
       "maxWidth": "100%"
+    }
+  },
+
+  "slider-layout#home": {
+    "children": ["image#brand1", "image#brand2", "image#brand3", "image#brand4", "image#brand5", "image#brand6"],
+    "props": {
+      "autoplay": {
+        "timeout": 7000,
+        "stopOnHover": true
+      }
     }
   }
 }
