--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,11 +1,11 @@
 {
   "store.home": { 
     "blocks": [
-      "responsive-layout.desktop#desktop",
-      "responsive-layout.desktop#desktop",
       "flex-layout.row",
       "shelf",
-      "slider-layout#home"
+      "slider-layout#home",
+      "responsive-layout.mobile#mobile",
+      "responsive-layout.desktop#desktop"
     ]
   },
 
