--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -19,7 +19,8 @@
       "isFullModeStyle": true,
       "headline": "Time to rethink your kitchen",
       "callToActionText": "Discover",
-      "textPosition": "center"
+      "textPosition": "center",
+      "": ""
     }
   }
 }
