--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -19,8 +19,7 @@
       "isFullModeStyle": true,
       "headline": "Time to rethink your kitchen",
       "callToActionText": "Discover",
-      "textPosition": "center",
-      "": ""
+      "textPosition": "center"
     }
   }
 }
