fix: fixed price props

--- a/store/blocks/product-price.jsonc
+++ b/store/blocks/product-price.jsonc
@@ -1,8 +1,8 @@
 {
   "product-price": {
     "props": {
-      "showSavings": false,
-      "showListPrice": true
+      "showSavings": true,
+      "showListPrice": false
     }
   }
 }
