fix: fixed price props

--- a/store/blocks/product-price.jsonc
+++ b/store/blocks/product-price.jsonc
@@ -1,7 +1,7 @@
 {
   "product-price": {
     "props": {
-      "showSavings": true,
+      "showSavings": false,
       "showListPrice": false
     }
   }
